--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,8 @@ eureka:
   instance:
     # eureka服务端的实例名称
     hostname: client
+    instance-id: ${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}:${random.value}
+    prefer-ip-address: true
   client:
      service-url:
       defaultZone: http://localhost:8761/eureka
