--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,4 +17,4 @@ eureka:
     prefer-ip-address: true
   client:
      service-url:
-       defaultZone: http://localhost:8761/eureka,http://localhost:8762/eureka
+       defaultZone: http://localhost:8761/eureka
